crates/keron-lang/tests/corpus/errors/check/for_body_non_void.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Void`, found `Int`
  --> 2:15
  |
2 | for x in xs { x }
  |               ^
